online-boutique-app/resources/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique-app-ingress
  namespace: frontend
spec:
  rules:
  - host: "boutique.decent-saarinen-171.epam.devops.delivery"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
